syntax = "proto3";

package slogger_transporter;

option go_package = "services/ping_pong_gen";

service PingPong {
  rpc Ping(PingPongPingRequest) returns (PingPongPingResponse) {}
}

message PingPongPingRequest {
  string message = 1;
}

message PingPongPingResponse {
  string message = 1;
}
